--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,71 @@
 body {
     background:url(../images/trees.png);
+    position:relative;
+    margin:-25px;
 }
 
-#box1 {
-    background-color:#74d1ca;
+#namebackground {
+    background-color:white;
+    height:100px;
+    position:relative;
 }
+
 
 #name {
     text-align:center;
     color:white;
-}
-
-#box2 {
-    background-color:white;
+    background-color:lightseagreen;
+    margin-left:230px;
+    width:200px;
+    height:100px;
+    line-height:3.5;
 }
 
 #about {
-    text-align:center;
+    text-align:left;
     color:#74d1ca;
+    border-bottom-style: solid;
+    border-color:grey;
+    font-size:30px;
+    height:50px;
+}
+
+h2 {
+    margin:1px;
+    margin-bottom:25px;
 }
 
 #p1 {
-    font-family:Georgia;
+    font-family:'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
+    text-align: justify;
+    line-height:1.5;
+    
+}
+
+.wrap {
+    width:1024px;
+    background-color:white;
+    margin:30px;
+    padding:20px;
+    position:absolute;
+    left:200px;
+    
+}
+
+#profilepic {
+    width:300px;
+    height:200px;
+    float:left;
+    padding-right:30px;
+    padding-bottom:20px;
+}
+
+#links {
+    font-weight:bold;
+    font-size:25px;
+    float:right;
+    position:absolute;
+    left:1220px;
+    bottom:30px;
+
 }
